--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/x-data-grid": "^6.14.0",
+    "apexcharts": "^3.43.0",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
