--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ VITE_IP_API="http://10.17.66.242:3000"
 
 VITE_Table_foxsystem_daily_report_bylot="/api/foxsystem_daily_report_bylot"
 VITE_Table_foxsystem_daily_report="/api/foxsystem_daily_report"
+VITE_Table_foxsystem_summary_holdingtime="/api/foxsystem_summary_holdingtime"
