update by apichet fusion pages

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,19 @@
 VITE_IP_API="http://10.17.66.242:3000"
 # VITE_IP_API="http://127.0.0.1:3000"
+VITE_IP_API_OLD=http://10.17.77.111:3001
 
 VITE_Table_foxsystem_daily_report_bylot="/api/foxsystem_daily_report_bylot"
 VITE_Table_foxsystem_daily_report="/api/foxsystem_daily_report"
 VITE_Table_foxsystem_summary_holdingtime="/api/foxsystem_summary_holdingtime"
+#Page-defect-sending
+#page-proces-output
+VITE_foxsystem_json_backup_header_ok=/api/foxsystem_json_backup_header_ok
+#Page-output-summary
+VITE_foxsystem_json_backup_header_summary=/api/foxsystem_json_backup_header_summary
+#Page-posting
+VITE_foxsystem_post_by_hr=/api/foxsystem_post_by_hr
+VITE_foxsystem_post_by_day=/api/foxsystem_post_by_day
+#Page-yield-and-defect
+VITE_foxsystem_json_backup_header_defect=/api/foxsystem_json_backup_header_defect
+VITE_foxsystem_summary_bylot=/api/foxsystem_summary_bylot
+
