--- a/package.json
+++ b/package.json
@@ -13,16 +13,32 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.14.0",
+    "@tremor/react": "^3.2.2",
     "apexcharts": "^3.43.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^2.30.0",
+    "faker": "^6.6.6",
+    "moment": "^2.29.4",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^2.23.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-icons": "^4.9.0",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.16.0",
+    "react-sparklines": "^1.7.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
